<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.jayxu</groupId>
    <artifactId>spring-boot-admin-server-docker</artifactId>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.4</version>
    </parent>
    <properties>
        <java.version>17</java.version>
        <admin.version>3.4.5</admin.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>de.codecentric</groupId>
            <artifactId>spring-boot-admin-starter-server</artifactId>
            <version>${admin.version}</version>
        </dependency>
        <dependency>
            <groupId>de.codecentric</groupId>
            <artifactId>spring-boot-admin-starter-client</artifactId>
            <version>${admin.version}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <image>
                        <name>mustangxu/spring-boot-admin-server-native:${project.version}-${git.commit.id.abbrev}</name>
                        <env>
                            <BP_JVM_VERSION>17</BP_JVM_VERSION>
                            <GRAALVM_QUICK_BUILD>true</GRAALVM_QUICK_BUILD>
                            <!--BP_LOG_LEVEL>DEBUG</BP_LOG_LEVEL-->
                        </env>
                    </image>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <configuration>
                    <failOnNoGitDirectory>false</failOnNoGitDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.fabric8</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>0.45.1</version>
                 <configuration>
                    <verbose>true</verbose>
                    <images>
                        <image>
                            <name>mustangxu/spring-boot-admin-server</name>
                            <build>
                                <tags>
                                    <!--tag>latest</tag-->
                                    <tag>%v-${git.commit.id.abbrev}</tag>
                                </tags>
                                <from>bellsoft/liberica-runtime-container:jre-17-slim-musl</from>
                                <workdir>/app</workdir>
                                <entryPoint>
                                    <exec>
                                        <arg>java</arg>
                                        <arg>-Xmx1G</arg>
                                        <arg>--enable-preview</arg>
                                        <arg>-XX:+UnlockExperimentalVMOptions</arg>
                                        <arg>-XX:+UseZGC</arg>
                                        <arg>-jar</arg>
                                        <arg>${project.artifactId}-${project.version}.jar</arg>
                                    </exec>
                                </entryPoint>
                                <assemblies>
                                    <assembly>
                                        <descriptorRef>artifact</descriptorRef>
                                        <targetDir>/app</targetDir>
                                    </assembly>
                                </assemblies>
                                <ports>
                                    <port>9000</port>
                                </ports>
                            </build>
                        </image>
                    </images>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <version>${admin.version}</version>
</project>
